--- a/Valpopp/.settings/org.eclipse.core.resources.prefs
+++ b/Valpopp/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebContent/scenarios/list.csv=UTF-8
+encoding//WebContent/scenarios/listexam.csv=UTF-8
 encoding//WebContent/strings/language.csv=UTF-8
 encoding/<project>=UTF-8
